[*] Fixed loader overlapping footer when loading data on endless scroll

--- a/src/pages/characters/styles.module.css
+++ b/src/pages/characters/styles.module.css
@@ -1,5 +1,6 @@
 .characters{
     padding: var(--main-padding);
+    margin-bottom: 40px;
 }
 .charactersGrid{
     display: grid;
