--- a/src/pages/comics/styles.module.css
+++ b/src/pages/comics/styles.module.css
@@ -1,5 +1,6 @@
 .comicsPage{
     padding: var(--main-padding);
+    margin-bottom: 40px;
 }
 .comicsGrid{
     display: grid;
